<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:id="@id/TableRow01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:textSize="40.0sp" android:id="@+id/btn7" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_07" android:layout_weight="1.0" android:onClick="seat"  />
        <Button android:textSize="40.0sp" android:id="@+id/btn8" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_08" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn9" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_09" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn10" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_10" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn11" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_11" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn12" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_12" android:layout_weight="1.0" android:onClick="seat" />
    </TableRow>
    <TableRow android:id="@id/tableRow1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:textSize="40.0sp" android:id="@+id/btn1" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_01" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn2" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_02" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn3" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_03" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn4" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_04" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn5" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_05" android:layout_weight="1.0" android:onClick="seat" />
        <Button android:textSize="40.0sp" android:id="@+id/btn6" android:background="@drawable/empty_w" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:minHeight="130.0dip" android:text="@string/SCL_06" android:layout_weight="1.0" android:onClick="seat" />
    </TableRow>
    <TableRow android:gravity="center" android:id="@id/tableRow3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:id="@id/from_seating_to_input" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Go back to student screen" android:onClick="load_input" />
        <Button android:id="@id/from_seating_to_admin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Go back to console" android:onClick="load_admin" />
    </TableRow>
</LinearLayout>